fixed success on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -147,16 +147,17 @@ a:hover, button:hover {
   cursor: pointer; }
 
 .success {
-  position: absolute;
-  left: 10%;
-  top: 40%;
   background-image: url(../assets/circle-check.svg);
   background-size: 50px;
   background-repeat: no-repeat;
-  background-position-y: 20px;
-  background-position-x: 280px;
-  padding: 10rem;
-  font-size: 4rem; }
+  background-position-y: 2%;
+  background-position-x: 50%;
+  padding: 7rem;
+  font-size: 4rem;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center; }
 
 form {
   padding: 1rem;
