--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -63,16 +63,15 @@ a:hover, button:hover {
 }
 
 .success {
-	position: absolute;
-	left: 10%;
-   	top: 40%;
-  	background-image: url(../assets/circle-check.svg);
+	background-image: url(../assets/circle-check.svg);
     	background-size: 50px;
-    	background-repeat: no-repeat;
-    	background-position-y: 20px;
-    	background-position-x: 280px;
-    	padding: 10rem;
+	background-repeat: no-repeat;
+    	background-position-y: 2%;
+    	background-position-x: 50%;
+    	padding: 7rem;
     	font-size: 4rem;
+    	display: flex;
+    	justify-content: center;
 }
 
 form {
